feat(gradle): Added publish script configurations for CF and Modrinth

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,20 @@
 
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+
+modname="Shulker Utilities"
+version=1.16.5-1.0.0
+
+
+release_type=release
+
+# CHANGE THIS
+cProjectId=257356
+mProjectId=257356
+
+github_project=MagnusHJensen/shulker-utilities
+
+minecraft_version=1.16.5
+forge_version=36.2.35
+
