--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.daemon=false
 
 modname="Shulker Utilities"
 version=1.16.5-1.0.0
+parchment_version=2022.03.06
 
 
 release_type=release
