feat(cactus shulker): Added cactus shulker boxes, which voids any items hoppered into them.

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,8 +24,8 @@ parchment_version=2022.03.06
 release_type=release
 
 # CHANGE THIS
-cProjectId=257356
-mProjectId=257356
+cProjectId=629477
+mProjectId=Rd2SNhPV
 
 github_project=MagnusHJensen/shulker-utilities
 
