fix(properties): Remove space and quotes from mod name

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 
-modname="Shulker Utilities"
+modname=Shulker-Utilities
 version=1.16.5-1.0.0
 parchment_version=2022.03.06
 
